--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My Little Rainbow</title>
-    <link rel="stylesheet" type="css" href="./main.css" />
+    <link rel="stylesheet" href="./main.css" />
   </head>
 
   <body>
